--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "sample-web-player",
   "version": "0.0.1",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "dev": "svelte-kit dev --port 3001",
     "build": "svelte-kit build",
@@ -25,13 +28,13 @@
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
+    "svelte2tsx": "^0.5.11",
     "tslib": "^2.3.1",
     "typescript": "~4.5.4"
   },
   "type": "module",
   "dependencies": {
     "@tonejs/midi": "^2.0.28",
-    "events": "^3.3.0",
     "tone": "^14.7.77",
     "webmidi": "^3.0.20"
   }
