--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-      "name": "svelte-piano",
-  "version": "0.0.1",
-  "engines": {
-    "node": "16.x"
-  },
-  "scripts": {
-    "dev": "svelte-kit dev --port 3001",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "node-sass": "^7.0.1",
-    "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.5.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.10.1",
-    "svelte2tsx": "^0.5.11",
-    "tslib": "^2.3.1",
-    "typescript": "~4.5.4"
-  },
-  "type": "module",
-  "dependencies": {
-    "@tonejs/midi": "^2.0.28",
-    "tone": "^14.7.77",
-    "webmidi": "^3.0.20"
-  }
+	"name": "svelte-piano",
+	"version": "0.0.2",
+	"engines": {
+		"node": "16.x"
+	},
+	"scripts": {
+		"dev": "svelte-kit dev --port 3001",
+		"build": "svelte-kit build",
+		"package": "svelte-kit package",
+		"package:watch": "svelte-kit package --watch",
+		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"@typescript-eslint/eslint-plugin": "^5.10.1",
+		"@typescript-eslint/parser": "^5.10.1",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^3.2.1",
+		"node-sass": "^7.0.1",
+		"prettier": "^2.5.1",
+		"prettier-plugin-svelte": "^2.5.0",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.2.6",
+		"svelte-preprocess": "^4.10.1",
+		"svelte2tsx": "^0.5.11",
+		"tslib": "^2.3.1",
+		"typescript": "~4.5.4"
+	},
+	"type": "module",
+	"dependencies": {
+		"@tonejs/midi": "^2.0.28",
+		"tone": "^14.7.77",
+		"webmidi": "^3.0.20"
+	}
 }
