--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "svelte-sampler",
-	"version": "0.0.7",
+	"version": "0.0.9",
 	"engines": {
-		"node": "16.x"
+		"node": "18.x"
 	},
 	"scripts": {
 		"dev": "svelte-kit dev --port 3001",
@@ -16,14 +16,14 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-auto": "1.0.0-next.52",
+		"@sveltejs/kit": "1.0.0-next.354",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"node-sass": "^7.0.1",
+		"sass": "^1.54.5",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
